--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="get" action="results.html"> <!-- TODO: Set Action and Method Properties -->
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <label for="firstname">Your First Name<span class="required-field">*</span></label></label>
+                <input type="text" id="firstname" name="firstname"minlength="2" maxlength="35" required>
+                <label for="lastname">Your Last Name<span class="required-field">*</span></label></label>
+                <input type="text" id="lastname" name="lastname"minlength="2" maxlength="35" required>
                 <!-- TODO: Create a "lastname" input with type "text" -->
+                <label for="age">Your Age</label>
+                <input type="number" name="age" id="age" min="21" max="120">
+                <h5>Must be 21 or older to enter the contest</h5>
+
             </div>
             <fieldset>
                 <legend>Your Contact Info</legend>
@@ -86,7 +90,7 @@
                         <option value="WY">Wyoming</option>
                     </select>
                     <label for="zip">Your Zipcode</label>
-                    <input type="text" id="zip" name="zip">
+                    <input type="number" id="zip" name="zip">
                 </div>
             </fieldset>
             <!-- TODO: Make fieldset and legend -->
